# mahasiswa-finder

./: Cargo.toml  README.md
src/: main.rs
src/lib/: cli.rs
