[package]
name = "mahasiswa-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }